# sandpile

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.tsv
.github/workflows/: ci.yml
lib/: CMakeLists.txt
lib/Arguments/: Arguments.cpp  Arguments.hpp
lib/Image/: CMakeLists.txt  Image.cpp  Image.hpp
lib/Queue/: CMakeLists.txt  Queue.hpp
lib/Table/: CMakeLists.txt  Table.hpp
lib/Tsv/: CMakeLists.txt  Tsv.hpp
